# mqlidea-RIGGWIRE

./: .gitignore  CLAUDE.md  README.md  build.gradle.kts  gradle.properties  gradlew  settings.gradle.kts
.claude/: ARCHITECTURE_REVIEW_SIGNAL_FLOW.md  MQL5_REFERENCE.md  RIGGWIRE_EA_ANALYSIS_REPORT.md  settings.local.json  settings.local.json.backup
.claude/agents/: build-resolver.md  code-optimizer.md  code-quality.md  mql5-specialist.md  orchestrator.md  plugin-developer.md  safety-analyzer.md
.claude/agents/_legacy_pydantic/: AGENT_CONSOLIDATION_ANALYSIS.md  BLITZFIRE_CONSOLIDATION_PLAN.md  COMPREHENSIVE_ANALYSIS_20260127_214519.md  COMPREHENSIVE_ANALYSIS_20260128_214602.md  COMPREHENSIVE_VALIDATION_COMPLETE.md  CONSOLIDATION_COMPLETE_SUMMARY.md  COVERAGE_VALIDATION_REPORT.md  DEEP_ANALYSIS_LEIlight_v3.38.md  DEEP_ANALYSIS_TOOLS_INVENTORY.md  DEEP_VALIDATION_REPORT.md  DEEP_VALIDATION_REPORT_v4.20.md  DEEP_VALIDATION_REPORT_v4.35.md  DEPLOYMENT_CHECKLIST.md  FINAL_VALIDATION_REPORT.md  INFRASTRUCTURE_ROLLOUT_SUMMARY.md  LEILIGHT_COMPREHENSIVE_ANALYSIS.md  LEILIGHT_V3.39_VALIDATION_REPORT.md  LEIlight_COMPREHENSIVE_FIXES.md  MIGRATION_GUIDE.md  NEVER_FAIL_BUILD_WORKFLOW.md  PRODUCTION_READINESS_REPORT.md  PRODUCTION_STATUS_FINAL.md  Project_overview.md  Pydantic_AI_ Agent_ Deep_Validator.md  Pydantic_AI_Claude_Interaction_Validator.md  REFACTOR_COMPLETE_SUMMARY.md  REVAMP_SUMMARY.md  RIGGWIRE_FINAL_CRITICAL_ANALYSIS.md  RIGGWIRE_FINAL_V3.10_FIX_REPORT.md  RIGGWIRE_V3.10_SYNC_REPORT.md  SHARED_INFRASTRUCTURE.md  UNIVERSAL_AGENT_REVAMP_SUMMARY.md  agent_factory_template.py  ai_agent_validator_requirements.txt  apply_leilight_fixes.py  awareness-orchestrator-analysis.md  awareness-orchestrator-architecture.md  awareness-orchestrator-validation.md  awareness-orchestrator.md  blitzfire-cpp-optimizer.md  (+35 more)
.claude/agents/_legacy_pydantic/awareness_orchestrator/: .env.example  AGENT_DISCOVERY_COMPLETE.md  CLAUDE_CODE_WORKFLOW.md  COMPLETE_THREE_PHASE_SUMMARY.md  DEEP_VALIDATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_NOTICE.md  LOGICAL_ERRORS_ANALYSIS.md  ORCHESTRATOR_COMPLETE_ENHANCEMENT_SUMMARY.md  PHASE_1_VALIDATION_REPORT.md  PHASE_2_3_IMPLEMENTATION_PLAN.md  PHASE_2_COMPLETION_SUMMARY.md  PHASE_3_COMPLETION_SUMMARY.md  PRIORITIZED_FIX_LIST.md  README.md  SESSION_SUMMARY_2025_09_30.md  TESTING_GUIDE.md  TEST_RESULTS_safe_test_cpp.md  TOOLS_NOT_YET_INTEGRATED.md  WORKFLOW_DIAGRAM.txt  __init__.py  __main__.py  agent.py  cli.py  dependencies.py  models.py  prompts.py  providers.py  requirements.txt  settings.py  test_orchestrator_analysis.py  test_orchestrator_suite.py  validate_integrations.py
.claude/agents/_legacy_pydantic/blitzfire_code_agent/: .env.example  README.md  __init__.py  agent.py  agent_factory.py  benchmark_harness.py  cli.py  dependencies.py  godbolt_integration.py  hft_specialization.py  models.py  prompts.py  providers.py  requirements.txt  settings.py  test_factory_integration.py  tools.py
.claude/agents/_legacy_pydantic/blitzfire_cpp_optimizer/: .env.example  ARCHON_BUG_REPORT.md  COMPREHENSIVE_100_PERCENT_VALIDATION_REPORT.md  COMPREHENSIVE_VALIDATION_REPORT.md  DEEP_VALIDATION_REPORT.md  ENTERPRISE_DEEP_VALIDATION_REPORT.md  FINAL_COMPREHENSIVE_VALIDATION_REPORT.md  README.md  __init__.py  agent.py  archon_api_wrapper.py  check_archon_knowledge.py  check_mcp_deep.py  cli.py  conftest.py  coverage.json  debug_mcp_sse.py  deep_security_scan.json  dependencies.py  models.py  prompts.py  providers.py  pytest.ini  requirements.txt  security_scan.json  security_scan_results.json  settings.py  show_archon_capabilities.py  test_archon_api_capabilities.py  test_archon_connection.py  test_archon_rag.py  test_archon_tools.py  test_async_simple.py  test_blitzfire_validator.py  test_hypothesis_deep.py  test_mcp_complete.py  test_mcp_comprehensive.py  test_mcp_headers.py  test_mcp_minimal.py  test_mcp_protocol.py  (+7 more)
.claude/agents/_legacy_pydantic/clang_tidy_ai_agent/: .env  DEEP_VALIDATION_REPORT.md  ENHANCED_VALIDATION_REPORT.md  FINAL_VALIDATION_REPORT.md  INITIAL.md  README.md  agent.py  agent_factory.py  bandit_report.json  clang_tidy_ai.db  cli.py  conftest.py  dependencies.py  models.py  requirements.txt  test_agent_comprehensive.py  test_factory_integration.py  test_performance_comprehensive.py  test_security_comprehensive.py  tools.py  validate_production.py
.claude/agents/_legacy_pydantic/mt5_infinite_reliability_agent/: .env.example  FTMO_LIVE_ANALYSIS_REPORT.md  QUICK_REFERENCE.md  README.md  VALIDATION_REPORT.md  VALIDATION_SUMMARY.md  __init__.py  agent.py  analyze_ftmo_live.py  analyze_live_indicator.py  chunked_analysis.py  demo_analysis.py  dependencies.py  external_agents.py  ftmo_live_analysis_results.json  live_indicator_analysis_results.json  models.py  mql5_docs.py  prompts.py  providers.py  reliability_report.json  requirements.txt  run_analysis.py  settings.py  simple_analysis.py  tools.py  validate_agent.py  validation_report.json
.claude/agents/_legacy_pydantic/multi_agent_debugging_system/: .env.example  CLAUDE_AGENT_GUIDE.md  CLAUDE_SUBAGENT.md  README.md  __init__.py  agent.py  agent_factory.py  cli.py  dependencies.py  prompts.py  (+5 more)
.claude/hooks/: README.md  archon_status_hook.sh  auto_detect_config.json  build_monitor.sh  clang_tidy_auto_detector.py  file_open_monitor.sh  instant_clang_tidy_check.sh  unified_archon_initializer.sh
.claude/orchestrator/: cloud_deployment.py  comprehensive_test.py  corrected_test.py  final_test.py  functional_test.py  github_integration.py  orchestrator.py  requirements.txt  simple_test.py  tool_discovery_agent.py  validation.py  validation_report.md
.claude/testing-framework/: .github_workflows_tests.yml  README.md  conftest_universal.py  generate_test_report.py  performance_benchmarks.py  pytest.ini  requirements.txt  test_base_classes.py
.github/workflows/: merge-build.yml  release-build.yml  release.yml
cpp_tests/: .gitignore  CLION_SETUP.md  CMakeLists.txt  README.md
cpp_tests/include/: training.hpp
cpp_tests/tests/: safe_test.cpp
gradle/wrapper/: gradle-wrapper.properties
(+2178 files in other folders)
